[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "toposolve"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "toposolve.__version__"}

[tool.cibuildwheel]
test-command = "python -c \"import toposolve; solver = toposolve.TSPSolver()\""
test-skip = ["*universal2:arm64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]